--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", sans-serif;
 }
 
 main {
-    min-height: calc(100vh - 3rem);
+    min-height: 40vh;
     display: grid;
     place-items: center;
     padding: 10%;
@@ -12,9 +15,29 @@ main {
 }
 
 div {
+    background-color: rgb(54, 54, 54);
+    color: rgb(233, 233, 233);
     text-align: center;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 button {
     display: inline-block;
+    background-color: rgb(46, 46, 46);
+    color: rgb(0, 168, 235);
+    padding: 2px;
+    border-radius: 10px;
+}
+
+.color {
+    color: rgb(0, 168, 235);
+}
+
+/* MENU */
+nav { 
+    background-color: white;
+    padding: 10px;
+    display: grid;
+    place-items: center;
 }
